# experimentation

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PROJECT_CONTEXT.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  classification.py  components.py  evaluation_view.py  history.py  inference.py  logging_setup.py  requirements.txt  storage.py  ui.py  utils.py
artifacts/: README.md
assets/: README.md
assets/metadata/: label_map.json
assets/templates/: templates.json
assets/training/: instructions.json  instructions_mango.json
caption_framework/: 00_methodology_overview.md  01_caption_ontology_spec.md  02_template_spec.md  03_validation_spec.md  04_dataset_schema_spec.md  05_quality_assurance_protocol.md  06_folder_structure_spec.md  07_ieee_methodology_section.md  README.md
configs/: README.md  audit.yaml  config.yaml  generation.yaml  normalization.yaml  paths.yaml  training.yaml  validation.yaml
configs/lora/: dora.yaml  lora.yaml  qlora.yaml
configs/models/: qwen25vl.yaml
configs/train/: qwen25vl_mango.yaml  qwen25vl_tomato.yaml
docs/: ARCHITECTURE.md  AUDIT.md  CONCEPTS.md  CONFIGURATION.md  CORPUS.md  DEMO_APP.md  DEVELOPMENT.md  EVALUATION.md  KNOWN_ISSUES.md  NORMALIZATION.md  ONTOLOGY.md  README.md  REPO_LAYOUT.md  ROADMAP.md  TRAINING.md  VOCABULARY.md
docs/adr/: 0001-single-canonical-dataset-schema.md  0002-src-layout-and-artifact-mapping.md  README.md
knowledge_base/: DKB_report.md  dkb.json
ontology_design/: 01_architecture.md  02_schema.md  03_concept_hierarchy.md  04_concept_graph.md  05_rules.md  06_statistics.md  07_crop_independence.md  08_versioning.md  09_validation.md  10_build_algorithm.md  11_cli_contract.md  12_testing_strategy.md  13_paper_contribution.md  README.md
scripts/: README.md  dev_setup.sh  render_readme_figures.py  run_pipeline.sh  setup_eval_env.sh
src/plantdx/: __about__.py  __init__.py  __main__.py  cli.py
src/plantdx/audit/: __init__.py  discovery.py  duplicates.py  engine.py  images.py  models.py  report.py
src/plantdx/concepts/: __init__.py  builder.py  checksum.py  models.py  policies.py  serialization.py  statistics.py  validator.py
src/plantdx/config/: __init__.py  loader.py  schema.py
src/plantdx/core/: __init__.py  enums.py  exceptions.py  seeding.py  types.py
src/plantdx/corpus/: __init__.py  builder.py  checksum.py  generator.py  models.py  planner.py  seeds.py  serialization.py  statistics.py  validator.py
src/plantdx/dataset/: __init__.py  converters.py  emitter.py  instructions.py  label_map.py  serialization.py  splits.py
src/plantdx/diversity/: __init__.py  controller.py  deduplicator.py  metrics.py
src/plantdx/evaluation/: __init__.py  checkpoint.py  classification.py  clinical.py  compare.py  config.py  hallucination.py  inference_runner.py  integrity.py  latency.py  metrics.py  per_disease.py  quality.py  report.py  reproducibility.py  runner.py  samples.py  stats.py  text_metrics.py  visualize.py  zero_shot.py
src/plantdx/exporters/: __init__.py  formats.py
src/plantdx/generation/: __init__.py  engine.py  models.py  planner.py  realizer.py  selector.py  templates.py
src/plantdx/knowledge_base/: __init__.py  loader.py  models.py
src/plantdx/normalization/: __init__.py  engine.py  models.py  report.py
src/plantdx/ontology/: __init__.py  builder.py  concept_schema.py  models.py
src/plantdx/qa/: __init__.py  acceptance.py  review.py  sampling.py
src/plantdx/templates/: __init__.py  checksum.py  loader.py  models.py  serialization.py  statistics.py  validator.py
src/plantdx/training/: __init__.py  checkpoints.py  command.py  config.py  inference.py  lora.py  metrics.py  mlx_runner.py  models.py  planner.py  qlora.py  reports.py  runner.py  scheduler.py  seeds.py
src/plantdx/utils/: __init__.py  hashing.py  io.py  logging.py  versioning.py
src/plantdx/validation/: __init__.py  battery.py  grammar.py  report.py  validators.py
src/plantdx/vocabulary/: __init__.py  builder.py  expander.py  lexicon.py  models.py
tests/: README.md  conftest.py
tests/benchmark/: test_diversity_gates.py
tests/integration/: test_pipeline_contracts.py  test_repo_structure.py
tests/unit/: test_cli.py  test_imports.py
tests/unit/app/: conftest.py  test_app_classification.py  test_app_history_eval.py  test_app_inference_logic.py  test_app_storage.py  test_app_utils.py
tests/unit/audit/: _dataset.py  conftest.py  test_discovery.py  test_duplicates.py  test_engine.py  test_images.py
tests/unit/concepts/: conftest.py  (+3 more)
(+85 files in other folders)
