[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "plantdx"
dynamic = ["version"]
description = "A knowledge-grounded framework for constructing instruction-tuning datasets for agricultural Vision-Language Models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "PlantDx Contributors" }]
keywords = [
    "vision-language-models",
    "instruction-tuning",
    "plant-pathology",
    "agriculture",
    "knowledge-grounded",
    "dataset",
    "qlora",
    "mlx",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Runtime dependencies kept intentionally light; heavy stacks live in extras.
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "pillow>=10.2",          # dataset audit engine (image metadata, hashing)
]

[project.optional-dependencies]
# Caption generation / diversity engine (Milestone 3+).
generate = [
    "numpy>=1.26",
    "tqdm>=4.66",
    "datasketch>=1.6",       # MinHash near-duplicate detection (diversity engine)
    "sacrebleu>=2.4",        # self-BLEU diversity metric
]
# Grammar / NLP validation stack (Validator V11).
nlp = [
    "language-tool-python>=2.8",
    "spacy>=3.7",
]
# Fine-tuning on Apple Silicon (MLX). Install only on macOS/arm64.
train = [
    "mlx>=0.15",
    "mlx-vlm>=0.1.0",
]
# Developer tooling.
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
# Documentation.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/iAakash1/experimentation"
Repository = "https://github.com/iAakash1/experimentation"
Specification = "https://github.com/iAakash1/experimentation/tree/main/caption_framework"

[project.scripts]
plantdx = "plantdx.cli:main"

# ---------------------------------------------------------------------------
# Hatch build config (src layout)
# ---------------------------------------------------------------------------
[tool.hatch.version]
path = "src/plantdx/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plantdx"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF", "D"]
ignore = ["D203", "D213"]   # conflicting docstring rules; pick one style each

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]           # tests need not be docstring-complete
"__init__.py" = ["F401"]    # re-exports

# ---------------------------------------------------------------------------
# mypy (strict typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/plantdx"]

[[tool.mypy.overrides]]
module = ["datasketch.*", "sacrebleu.*", "mlx.*", "mlx_vlm.*", "language_tool_python.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest / coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: cross-module pipeline tests",
    "benchmark: dataset-quality / diversity benchmark tests (may be slow)",
    "requires_dkb: needs knowledge_base/dkb.json present",
    "requires_mlx: needs Apple Silicon + MLX (training)",
]

[tool.coverage.run]
branch = true
source = ["src/plantdx"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
